# house-messenger

./: .gitignore
messenger-client/: CMakeLists.txt
messenger-client/include/network/: client.hpp
messenger-client/src/: main.cpp
messenger-client/src/network/: client.cpp
messenger-server/: CMakeLists.txt
messenger-server/include/auth/: auth_handler.hpp
messenger-server/include/db/: database_manager.hpp  sql_queries.hpp  stmt_guard.hpp
messenger-server/include/interfaces/: interfaces.hpp
messenger-server/include/network/: command_handler.hpp  file_server.hpp  server.hpp
messenger-server/include/utils/: logger.hpp  string_utils.hpp  winsock_manager.hpp
messenger-server/src/: main.cpp
messenger-server/src/auth/: auth_handler.cpp
messenger-server/src/db/: database_manager.cpp
messenger-server/src/network/: command_handler.cpp  server.cpp
messenger-server/src/utils/: logger.cpp  winsock_manager.cpp
messenger-ui/: index.js  package-lock.json  package.json
messenger-ui/src/: auth_manager.js  index.html  profile_manager.js  renderer.js  ui_manager.js
messenger-ui/src/managers/: auth_manager.js  chat_manager.js  input_manager.js  network_manager.js  profile_manager.js  sidebar_manager.js
messenger-ui/src/styles/: auth.css  chat.css  components.css  details.css  main.css  sidebar.css  variables.css
messenger-ui/src/ui/: ui_context_menu.js  ui_dialogs.js  ui_manager.js  ui_messages.js  ui_utils.js
